[gd_scene load_steps=2 format=3 uid="uid://bqj8x7k3m2n1p"]

[ext_resource type="Script" path="res://scripts/managers/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"
flat = false

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
flat = false

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your WiFi IP: 192.168.1.100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter host IP address"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"
flat = false

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Battle"
flat = false

